rewrite without color-downgrading via FastLED-NeoMatrix

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,9 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
-	marcmerlin/FastLED NeoMatrix@^1.2
 	mathertel/OneButton@^2.6.1
 	hpsaturn/ESP32 Wifi CLI@^0.3.3
+	fastled/FastLED@^3.9.13
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 upload_protocol = esptool
