add minimum brightness mode and OTA flashing

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,11 +18,13 @@ lib_deps =
 	fastled/FastLED@^3.9.13
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-upload_protocol = esptool
+; upload_protocol = esptool
+upload_protocol = espota
+upload_port = 192.168.211.223
 extra_scripts = 
 build_flags =
-  -D CORE_DEBUG_LEVEL=5
+  -D CORE_DEBUG_LEVEL=4
   -D SHELLMINATOR_BUFF_LEN=70
   -D SHELLMINATOR_BUFF_DIM=70
   -D COMMANDER_MAX_COMMAND_SIZE=70
-  -D WCLI_MAX_CMDS=5 ; your custom commands count plus one
+  -D WCLI_MAX_CMDS=9 ; your custom commands count plus one
