--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,8 @@ lib_deps =
 	mathertel/OneButton@^2.6.1
 	hpsaturn/ESP32 Wifi CLI@^0.3.3
 	fastled/FastLED@^3.9.13
+  pablomarquez76/PS4_Controller_Host @ ^1.0.9
+  joaolopesf/RemoteDebug @ ^3.0.5
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 ; upload_protocol = esptool
