--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = espressif32@6.10.0
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = 
+lib_deps =   
+  ; joaolopesf/RemoteDebug @ ^3.0.5
+  ; joaolopesf/RemoteDebugger @ ^0.9.4
 	hpsaturn/ESP32 Wifi CLI@^0.3.3
 	fastled/FastLED@^3.9.13
 monitor_speed = 115200
@@ -34,6 +36,8 @@ platform = espressif32@6.10.0
 board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
+  ; joaolopesf/RemoteDebug @ ^3.0.5
+  ; joaolopesf/RemoteDebugger @ ^0.9.4
 	hpsaturn/ESP32 Wifi CLI@^0.3.3
 	fastled/FastLED@^3.9.13
 monitor_speed = 115200
