try macros to disable most of the heavy code

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-ota]
+[env]
 platform = espressif32@6.10.0
 board = esp32doit-devkit-v1
 framework = arduino
 lib_deps =   
-  ; joaolopesf/RemoteDebug @ ^3.0.5
-  ; joaolopesf/RemoteDebugger @ ^0.9.4
+  pablomarquez76/PS4_Controller_Host @ ^1.0.9
 	hpsaturn/ESP32 Wifi CLI@^0.3.3
 	fastled/FastLED@^3.9.13
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
+board_build.partitions = partitions.csv
+
+
+[env:esp32doit-devkit-ota]
 ; upload_protocol = esptool 
 upload_protocol = espota
 upload_port = 192.168.211.223
@@ -28,26 +31,16 @@ build_flags =
   -D SHELLMINATOR_BUFF_LEN=70
   -D SHELLMINATOR_BUFF_DIM=70
   -D COMMANDER_MAX_COMMAND_SIZE=70
-  -D WCLI_MAX_CMDS=9 ; your custom commands count plus one
+  -D WCLI_MAX_CMDS=10 ; your custom commands count plus one
 
 
 [env:esp32doit-devkit]
-platform = espressif32@6.10.0
-board = esp32doit-devkit-v1
-framework = arduino
-lib_deps = 
-  ; joaolopesf/RemoteDebug @ ^3.0.5
-  ; joaolopesf/RemoteDebugger @ ^0.9.4
-	hpsaturn/ESP32 Wifi CLI@^0.3.3
-	fastled/FastLED@^3.9.13
-monitor_speed = 115200
-monitor_filters = esp32_exception_decoder
 upload_protocol = esptool
 extra_scripts = 
 build_flags =
-  ; -D CORE_DEBUG_LEVEL=1
-  -D FASTLED_ALLOW_INTERRUPTS=0
+  ; -D CORE_DEBUG_LEVEL=4
+  ; -D FASTLED_ALLOW_INTERRUPTS=0
   -D SHELLMINATOR_BUFF_LEN=70
   -D SHELLMINATOR_BUFF_DIM=70
   -D COMMANDER_MAX_COMMAND_SIZE=70
-  -D WCLI_MAX_CMDS=9 ; your custom commands count plus one
+  -D WCLI_MAX_CMDS=10 ; your custom commands count plus one
