--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,15 @@ lib_deps =
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 board_build.partitions = partitions.csv
+build_flags =
+  ; -D CORE_DEBUG_LEVEL=4
+  ; -D FASTLED_ALLOW_INTERRUPTS=0
+  ; -D ENABLE_REMOTE_DEBUG=1
+  ; -D ENABLE_WCLI=1
+  ; -D SHELLMINATOR_BUFF_LEN=70
+  ; -D SHELLMINATOR_BUFF_DIM=70
+  ; -D COMMANDER_MAX_COMMAND_SIZE=70
+  ; -D WCLI_MAX_CMDS=10 ; your custom commands count plus one
 
 
 [env:esp32doit-devkit-ota]
@@ -26,21 +35,8 @@ board_build.partitions = partitions.csv
 upload_protocol = espota
 upload_port = 192.168.211.223
 extra_scripts = 
-build_flags =
-  ; -D CORE_DEBUG_LEVEL=4
-  -D SHELLMINATOR_BUFF_LEN=70
-  -D SHELLMINATOR_BUFF_DIM=70
-  -D COMMANDER_MAX_COMMAND_SIZE=70
-  -D WCLI_MAX_CMDS=10 ; your custom commands count plus one
 
 
 [env:esp32doit-devkit]
 upload_protocol = esptool
 extra_scripts = 
-build_flags =
-  ; -D CORE_DEBUG_LEVEL=4
-  ; -D FASTLED_ALLOW_INTERRUPTS=0
-  -D SHELLMINATOR_BUFF_LEN=70
-  -D SHELLMINATOR_BUFF_DIM=70
-  -D COMMANDER_MAX_COMMAND_SIZE=70
-  -D WCLI_MAX_CMDS=10 ; your custom commands count plus one
