--- a/platformio.ini
+++ b/platformio.ini
@@ -14,20 +14,13 @@ board = esp32doit-devkit-v1
 framework = arduino
 lib_deps =   
   pablomarquez76/PS4_Controller_Host @ ^1.0.9
-	hpsaturn/ESP32 Wifi CLI@^0.3.3
 	fastled/FastLED@^3.9.13
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 board_build.partitions = partitions.csv
 build_flags =
   ; -D CORE_DEBUG_LEVEL=4
-  ; -D FASTLED_ALLOW_INTERRUPTS=0
-  ; -D ENABLE_REMOTE_DEBUG=1
-  ; -D ENABLE_WCLI=1
-  ; -D SHELLMINATOR_BUFF_LEN=70
-  ; -D SHELLMINATOR_BUFF_DIM=70
-  ; -D COMMANDER_MAX_COMMAND_SIZE=70
-  ; -D WCLI_MAX_CMDS=10 ; your custom commands count plus one
+  -D ENABLE_REMOTE_DEBUG=1
 
 
 [env:esp32doit-devkit-ota]
