--- a/platformio.ini
+++ b/platformio.ini
@@ -15,12 +15,12 @@ framework = arduino
 lib_deps =   
   pablomarquez76/PS4_Controller_Host @ ^1.0.9
 	fastled/FastLED@^3.9.13
+  gemi254/ConfigAssist @ ^2.8.7
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 board_build.partitions = partitions.csv
 build_flags =
   ; -D CORE_DEBUG_LEVEL=4
-  -D ENABLE_REMOTE_DEBUG=1
 
 
 [env:esp32doit-devkit-ota]
